Changed site domain / Updated file paths

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://example.com"
+baseURL = "https://flamboyant-feynman-6fa3ca.netlify.com/"
 languageCode = "en-us"
 title = "Carpal Tunnel Center"
 theme = "carpal-tunnel"
