--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -2,8 +2,8 @@ backend:
   name: git-gateway
   branch: master
 
-media_folder: "themes/carpal-tunnel/static/assets/images/page-images"
-public_folder: "themes/carpal-tunnel/assets/images/page-images"
+media_folder: "themes/carpal-tunnel/static/assets/images/"
+public_folder: "themes/carpal-tunnel/assets/images/"
 
 collections:
   - label: "Team"
@@ -16,7 +16,7 @@ collections:
         fields:
           - label: "Team Member"
             name: "member"
-            widget: "list"
+            widget: object
             fields:
               - {label: "Name", name: "title", widget: "string"}
               - {label: "Specialty", name: "specialty", widget: "string"}
