--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -2,8 +2,8 @@ backend:
   name: git-gateway
   branch: master
 
-media_folder: "themes/carpal-tunnel/static/assets/images/"
-public_folder: "themes/carpal-tunnel/assets/images/"
+media_folder: "themes/carpal-tunnel/static/assets/images/page-images"
+public_folder: "themes/carpal-tunnel/assets/images/page-images"
 
 collections:
   - label: "Team"
@@ -16,7 +16,10 @@ collections:
         fields:
           - label: "Team Member"
             name: "member"
-            widget: object
+            widget: "list"
             fields:
               - {label: "Name", name: "title", widget: "string"}
               - {label: "Specialty", name: "specialty", widget: "string"}
+              - {label: "Text", name: "text", widget: "markdown"}
+              - {label: "Link to Linkedin", name: "linkedin_link", widget: "string"}
+              - {label: "Photo", name: "image", widget: "file"}
