--- a/themes/carpal-tunnel/data/team.yml
+++ b/themes/carpal-tunnel/data/team.yml
@@ -2,30 +2,35 @@ member:
   - image: assets/images/page-images/dr_green.jpg
     linkedin_link: '#'
     specialty: Hand surgeon
-    text: >-
-      Some text
-
-
-      <p>Dr. Rodney Green received his Medical Degree from the University of the
+    text:
+      
+      Dr. Rodney Green received his Medical Degree from the University of the
       Witwatersrand in Johannesburg, South Africa. He did his specialty training
       at the Cleveland Clinic; in General Surgery, Plastic Surgery and Hand
       Surgery. He is certified by the American Board of Plastic Surgery since
       1989 and received a Certificate of Additional Qualification (CAQ) in Hand
       Surgery in 2004. He holds membership in The American Society of Plastic
       Surgeons and The American Society for Aesthetic Plastic Surgery and is a
-      Fellow of The American College of Surgeons.</p> <p>In 1993, Dr. Green
+      Fellow of The American College of Surgeons.
+
+
+      In 1993, Dr. Green
       trained closely with Dr. John Agee in Sacramento CA, legendary developer
       of the AGEE endoscopic carpal tunnel release technique and
-      instrumentation.</p> <p>Over the past thirty years, Dr. Green has
+      instrumentation.
+
+
+      Over the past thirty years, Dr. Green has
       performed thousands of aesthetic and reconstructive plastic surgeries for
       patients countrywide and has become respected as a Carpal Tunnel Surgeon.
       He serves as Director and Surgeon at the Carpal Tunnel Center, operating
-      on patients in both his Cleveland, OH, and Lakewood, NJ, offices. </p>
-      <p>Dr. Green is on the Medical Staff with Privileges at Cleveland Clinic
+      on patients in both his Cleveland, OH, and Lakewood, NJ, offices.
+
+
+      Dr. Green is on the Medical Staff with Privileges at Cleveland Clinic
       Hillcrest Hospital  and serves as Medical Director at the Legacy Surgery
-      Center, a private State Licensed Surgery Center accredited by <a
-      target='_blank' href='https://www.aaaasf.org'>AAAASF</a>, Medicare, and
-      BWC. </p>
+      Center, a private State Licensed Surgery Center accredited by [AAAASF](https://www.aaaasf.org/), Medicare, and
+      BWC.
     title: 'Dr. Rodney Green, M.D. FACS'
   - image: assets/images/page-images/dr_bird.jpg
     linkedin_link: '#'
