--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -9,34 +9,36 @@ collections:
   - label: "Team"
     name: "team"
     files:
+      - name: "home_title"
+        label: "Homepage Heading Text"
+        widget: "string"
       - name: "members"
-        label: "Members"
+        label: "Team Member"
         file: "themes/carpal-tunnel/data/team.yml"
         extension: "yml"
-          fields:
-            - label: "Homepage Heading Text"
-              name: "home_title"
-              widget: "string"
-          fields:
-            - label: "Team Member"
-              name: "member"
-              widget: "list"
-              fields:
-                - {label: "Name", name: "title", widget: "string"}
-                - {label: "Specialty", name: "specialty", widget: "string"}
-                - {label: "Text", name: "text", widget: "markdown"}
-                - {label: "Link to Linkedin", name: "linkedin_link", widget: "string"}
-                - {label: "Photo", name: "image", widget: "file"}
-          fields:
-            - label: "Additional Staff Heading Text"
-              name: "staff_title"
-              widget: "string"
-          fields:
-            - label: "Additional Staff"
-              name: "staff"
-              widget: "list"
-              fields:
-                - {label: "Name", name: "title", widget: "string"}
-                - {label: "Specialty", name: "specialty", widget: "string"}
-                - {label: "Link to Linkedin", name: "linkedin_link", widget: "string"}
-                - {label: "Photo", name: "image", widget: "file"}
+        fields:
+          - label: "Members"
+            name: "member"
+            widget: "list"
+            fields:
+              - {label: "Name", name: "title", widget: "string"}
+              - {label: "Specialty", name: "specialty", widget: "string"}
+              - {label: "Text", name: "text", widget: "markdown"}
+              - {label: "Link to Linkedin", name: "linkedin_link", widget: "string"}
+              - {label: "Photo", name: "image", widget: "file"}
+      - name: "staff_title"
+        label: "Additional Staff Heading Text"
+        widget: "string"
+      - name: "staff"
+        label: "Additional Staff"
+        file: "themes/carpal-tunnel/data/team.yml"
+        extension: "yml"
+        fields:
+          - label: "Members"
+            name: "staff"
+            widget: "list"
+            fields:
+              - {label: "Name", name: "title", widget: "string"}
+              - {label: "Specialty", name: "specialty", widget: "string"}
+              - {label: "Link to Linkedin", name: "linkedin_link", widget: "string"}
+              - {label: "Photo", name: "image", widget: "file"}
