--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -11,11 +11,11 @@ collections:
     files:
       file: "themes/carpal-tunnel/data/team.yml"
       extension: "yml"
-    - name: "Homepage_title"
+      name: "Homepage_title"
       label: "Homepage Heading Text"
       fields:
         - {label: "Enter Heading", name: "home_title", widget: "string"}
-    - name: "members"
+      name: "members"
       label: "Team Member"
       fields:
         - label: "Members"
@@ -27,11 +27,11 @@ collections:
             - {label: "Text", name: "text", widget: "markdown"}
             - {label: "Link to Linkedin", name: "linkedin_link", widget: "string"}
             - {label: "Photo", name: "image", widget: "file"}
-    - name: "staffpage_title"
+      name: "staffpage_title"
       label: "Additional Staff Heading Text"
       fields:
         - {label: "Enter Heading", name: "staff_title", widget: "string"}
-    - name: "staff_list"
+      name: "staff_list"
       label: "Additional Staff"
       fields:
         - label: "Members"
