--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -9,30 +9,30 @@ collections:
   - label: "Team"
     name: "team"
     files:
-      name: "homepage_title"
-      label: "Homepage Heading Text"
-      file: "themes/carpal-tunnel/data/team.yml"
-      fields:
-        - label: "Homepage Heading"
-          name: "home_title"
-          widget: "string"
-        - label: "Members"
-          name: "member"
-          widget: "list"
-          fields:
-            - {label: "Name", name: "title", widget: "string"}
-            - {label: "Specialty", name: "specialty", widget: "string"}
-            - {label: "Text", name: "text", widget: "markdown"}
-            - {label: "Link to Linkedin", name: "linkedin_link", widget: "string"}
-            - {label: "Photo", name: "image", widget: "file"}
-        - label: "Additional Staff Heading Text"
-          name: "staff_title"
-          widget: "string"
-        - label: "Additional Staff"
-          name: "staff_list"
-          widget: "list"
-          fields:
-            - {label: "Name", name: "title", widget: "string"}
-            - {label: "Specialty", name: "specialty", widget: "string"}
-            - {label: "Link to Linkedin", name: "linkedin_link", widget: "string"}
-            - {label: "Photo", name: "image", widget: "file"}
+      - name: "homepage_title"
+        label: "Homepage Heading Text"
+        file: "themes/carpal-tunnel/data/team.yml"
+        fields:
+          - label: "Homepage Heading"
+            name: "home_title"
+            widget: "string"
+          - label: "Members"
+            name: "member"
+            widget: "list"
+            fields:
+              - {label: "Name", name: "title", widget: "string"}
+              - {label: "Specialty", name: "specialty", widget: "string"}
+              - {label: "Text", name: "text", widget: "markdown"}
+              - {label: "Link to Linkedin", name: "linkedin_link", widget: "string"}
+              - {label: "Photo", name: "image", widget: "file"}
+          - label: "Additional Staff Heading Text"
+            name: "staff_title"
+            widget: "string"
+          - label: "Additional Staff"
+            name: "staff_list"
+            widget: "list"
+            fields:
+              - {label: "Name", name: "title", widget: "string"}
+              - {label: "Specialty", name: "specialty", widget: "string"}
+              - {label: "Link to Linkedin", name: "linkedin_link", widget: "string"}
+              - {label: "Photo", name: "image", widget: "file"}
