--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "modstud.io",
   "license": "ISC",
   "dependencies": {
-    "tiny-slider": "^2.9.2"
+    "tiny-slider": "^2.9.2",
+    "vanilla-masker": "^1.2.0"
   }
 }
