--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -9,6 +9,15 @@ collections:
   - label: "Team"
     name: "team"
     files:
+      - name: "general_settings"
+        file: "config.yml"
+        fields:
+          - label: "Site Title"
+            name: "site_title"
+            widget: "string"
+  - label: "Team"
+    name: "team"
+    files:
       - name: "team_settings"
         label: "Team Settings"
         file: "themes/carpal-tunnel/data/team.yml"
@@ -22,6 +31,7 @@ collections:
             fields:
               - {label: "Name", name: "title", widget: "string"}
               - {label: "Specialty", name: "specialty", widget: "string"}
+              - {label: "ID", name: "id", widget: "string"}
               - {label: "Text", name: "text", widget: "markdown"}
               - {label: "Link to Linkedin", name: "linkedin_link", widget: "string"}
               - {label: "Photo", name: "image", widget: "file"}
