--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -8,10 +8,10 @@ public_folder: "/assets/images/page-images"
 collections:
   - label: "General"
     name: "general"
-    files:
+    file: "config.yml"
+    fields:
       - name: "general_settings"
         label: "General Settings"
-        file: "config.yml"
         fields:
           - label: "Site Title"
             name: "title"
@@ -31,7 +31,6 @@ collections:
                 widget: "text"
       - name: "contact"
         label: "Contact Info"
-        file: "config.yml"
         fields:
           - label: "Contact Heading"
             name: "contact_heading"
