--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -9,33 +9,33 @@ collections:
   - label: "General"
     name: "general"
     files:
-      file: "config.yml"
-      fields:
-        - name: "general_settings"
-          label: "General Settings"
-          fields:
-            - label: "Site Title"
-              name: "title"
-              widget: "string"
-            - label: "Site Domain"
-              name: "baseURL"
-              widget: "string"
-            - label: "Parameters"
-              name: "params"
-              widget: "object"
-              fields:
-                - name: "logo"
-                  label: "Logo"
-                  widget: "file"
-                - name: "description"
-                  label: "Description"
-                  widget: "text"
-        - name: "contact"
-          label: "Contact Info"
-          fields:
-            - label: "Contact Heading"
-              name: "contact_heading"
-              widget: "string"
+      - file: "config.yml"
+        fields:
+          - name: "general_settings"
+            label: "General Settings"
+            fields:
+              - label: "Site Title"
+                name: "title"
+                widget: "string"
+              - label: "Site Domain"
+                name: "baseURL"
+                widget: "string"
+              - label: "Parameters"
+                name: "params"
+                widget: "object"
+                fields:
+                  - name: "logo"
+                    label: "Logo"
+                    widget: "file"
+                  - name: "description"
+                    label: "Description"
+                    widget: "text"
+          - name: "contact"
+            label: "Contact Info"
+            fields:
+              - label: "Contact Heading"
+                name: "contact_heading"
+                widget: "string"
   - label: "Team"
     name: "team"
     files:
