--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -29,12 +29,57 @@ collections:
             - name: "description"
               label: "Description"
               widget: "text"
-        - name: "contact"
-          label: "Contact Info"
+  - label: "Contact"
+    name: "contact"
+    files:
+    - label: "Contact Info"
+      name: "contact_info"
+      file: "themes/carpal-tunnel/data/contact.yml"
+      fields:
+        - label: "Contact Title"
+          name: "contact_heading"
+          widget: "string"
+        - label: "Location Title"
+          name: "locations_heading"
+          widget: "string"
+        - label: "Cleveland Office"
+          name: "cleveland"
+          widget: "object"
           fields:
-            - label: "Contact Heading"
-              name: "contact_heading"
+            - name: "cleveland_address_1"
+              label: "Address field #1"
               widget: "string"
+            - name: "cleveland_address_2"
+              label: "Address field #2"
+              widget: "string"
+            - name: "cleveland_email"
+              label: "Email"
+              widget: "string"
+            - name: "cleveland_phone"
+              label: "Phone number"
+              widget: "string"
+            - name: "cleveland_hours_1"
+              label: "Working hours field #1"
+              widget: "string"
+            - name: "cleveland_hours_2"
+              label: "Working hours field #2"
+              widget: "string"
+         - label: "Lakewood Office"
+           name: "lakewood"
+           widget: "object"
+           fields:
+              - name: "lakewood_address_1"
+                label: "Address field #1"
+                widget: "string"
+              - name: "lakewood_address_2"
+                label: "Address field #2"
+                widget: "string"
+              - name: "lakewood_address_3"
+                label: "Address field #3"
+                widget: "string"
+              - name: "lakewood_phone"
+                label: "Phone number"
+                widget: "string"
   - label: "Team"
     name: "team"
     files:
